# recipefy

./: .gitignore  pyproject.toml  requirements.txt
base_templates/global/: base.html  home.html
core/: settings.py  urls.py  wsgi.py
notes/: apps.md  commands.sh  django_files.md  http.md  renders.md
project/: settings.py  urls.py
recipes/: admin.py  models.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_category.py  0003_alter_recipe_cover_alter_recipe_is_published_and_more.py
recipes/static/recipes/css/: style.css
recipes/templates/recipes/: home.html
recipes/templates/recipes/pages/: category.html  home.html  recipe-view.html  search.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  recipe.html  searchbar.html
recipes/tests/: conftest.py  test_base.py  test_model_category.py  test_model_recipe.py  test_models_default_values.py  test_pagination.py  test_recipe_base.py  test_recipe_models.py  test_recipe_status_code.py  test_recipe_template_loaded.py  test_recipe_urls.py  test_recipe_views.py  test_status_code.py  test_template_integrity.py  test_template_loaded.py  test_urls.py  test_views.py
static/recipes/css/: style.css
utils/: pagination.py
utils/recipes/: dummy.py
