[tool.poetry]
name = "recipefy"
version = "1.0.0"
description = "A social media webapp to share recipe ideas"
authors = ["jamesislan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.1"
asgiref = "3.7.2"
Faker = "22.2.0"
pillow = "10.2.0"
python-dateutil = "2.8.2"
six = "1.16.0"
sqlparse = "0.4.4"
tzdata = "2023.4"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^7.4.4"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
lint = "pylint tests taskipy"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = [
    "test.py", "test_*.py", "*_test.py", 
    "tests.py", "tests_*.py", "*_tests.py", 
    "testing/python/*.py"
    ]
addopts = ["--doctest-modules", "--strict-markers", "-rP"]
markers = ["slow", "fast"]